--- a/.gitignore
+++ b/.gitignore
@@ -119,12 +119,12 @@ contrib/devtools/split-debug.sh
 .cproject
 .project
 .settings/language.settings.xml
-src/qtum-cli
-src/qtum-tx
-src/qtumd
-src/bench/bench_qtum
-src/qt/qtum-qt
-src/qt/test/test_qtum-qt
+src/eurekacoin-cli
+src/eurekacoin-tx
+src/eurekacoind
+src/bench/bench_eurekacoin
+src/qt/eurekacoin-qt
+src/qt/test/test_eurekacoin-qt
 src/test/buildenv.py
-src/test/test_qtum
-src/test/test_qtum_fuzzy
+src/test/test_eurekacoin
+src/test/test_eurekacoin_fuzzy
